--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,13 +12,11 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+    <div class="text-5xl font-bold">I'm Oladele Rofiat</div>
+    <div class="text-3xl py-3 font-bold">Digital Marketing Specialist</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        This is <b>Oladele Rofiat</b>I am a digital marketer specialize in Search Engine Optimization (SEO), Search Engine Marketing (SEM), social media advertising, email marketing, and content creation. I help business owner drive growth, increase brand visibility and optimize Return on Investment(ROI). With a passion for staying ahead of trends and continuously improving my skills, I help businesses grow by boosting online presence, increasing engagement, and driving conversions through effective marketing solutions.
       </text>
     </div>
     <div class="mt-8">
