--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,9 +20,9 @@ const last_posts = posts.slice(0, 3);
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
+      <a class="btn" href="https://x.com/oladele66025?t=XGIhQ2TscX8ru9pYuDa9qg&s=09"> Let's connect!</a>
+      <a href="www.linkedin.com/in/rofiat-oladele" target="_blank" class="btn btn-outline ml-5">
+        Review my Resume
       </a>
     </div>
   </div>
