--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,10 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   I am an exceptional, charismatic, career-minded individual, resourceful and knowledgeable Social Media professional with expertise in SEO, looking forward to utilizing and developing my skills and experience to contribute to the growth of a global firm.   I am proactive, energetic, and disciplined, with a passion for Digital Marketing and a strong interest in solving complex marketing problems. I am committed and enthusiastic about applying creative thinking to develop and execute social media and SEO strategies that drive engagement, build brand awareness, and foster community growth.
   </div>
 
   <div class="mb-5">
@@ -21,12 +18,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Digital Marketing"
+      subtitle="2024 at Honey Treat Trade Academy, Lagos, Nigeria"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="B.sc in Biochemistry"
+      subtitle="2018 to 2023 at Osun state University, Osun, Nigeria"
     />
   </div>
 
@@ -36,22 +33,34 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Digital Marketing Intern"
+      subtitle="2024 at GREENPATHSDEV, Lagos, Nigeria"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      •	Executed SEO best practices to enhance website visibility
+•	Designed and launch targeted email marketing campaigns
+•	Managed a Google business profile
+•	Monitored digital marketing metrics such as conversion rate, bounce rate
+•	Managed and optimized PPC campaigns across various platforms 
+•	Assisted in creating SEO-friendly content, including blog posts, web pages, and social media updates, to attract organic traffic.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Customer Service"
+      subtitle="From 2023 to 2024 at Oyin’s Store, Osun, Nigeria"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      •	Organizing customer information and details
+•	Handling customer’s inquiries and complaints
+•	Maintained detailed records of customer
+•	Assisted customers with product selection
+
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Medical Laboratory Intern"
+      subtitle="From 2021 to 2022 at DE-Lakeland Imperial Medical Centre, Lagos, Nigeria"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      •	Assisted in preparing and analyzing samples for experiments
+•	Responsible for maintaining laboratory equipment
+•	Documented experimental results and observations meticulously
+•	Ensured compliance with safety regulations and protocols.
     </TimeLineElement>
   </div>
 
@@ -61,10 +70,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="#" target="_blank"> Google Ads Video Certification (https://skillshop.credential.net/a0c77c70-bbfe-46c4-95d8-4317e04dbc72#acc.9Z2ynStu)</a>
     </li>
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="#" target="_blank"> Google Ads Display Certification (https://skillshop.credential.net/b67b8bd8-d074-4c79-9f1f-18b4099e8955#acc.8areD3JC)</a>
     </li>
   </ul>
 
@@ -73,20 +82,20 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>Email Marketing</li>
+    <li>Google Business Profile</li>
+    <li>Meta Ads</li>
+    <li>Social Marketing</li>
+    <li>Google Ads</li>
+    <li>Search Engine Optimization</li>
+    <li>Pay Per Click</li>
+    <li>Schema Markup</li>
+    <li>Linkedin Optimization</li>
+    <li>Google Analytics</li>
+    <li>Google Search Console</li>
+    <li>Wikipedia</li>
+    <li>Content Writing</li>
+    <li>Looker Studio</li>
+    <li>Google Tag Manager</li>
   </ul>
 </BaseLayout>
