--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -70,10 +70,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Google Ads Video Certification (https://skillshop.credential.net/a0c77c70-bbfe-46c4-95d8-4317e04dbc72#acc.9Z2ynStu)</a>
+      <a href="#" target="_blank"> Google Ads Video Certification https://skillshop.credential.net/a0c77c70-bbfe-46c4-95d8-4317e04dbc72#acc.9Z2ynStu</a>
     </li>
     <li>
-      <a href="#" target="_blank"> Google Ads Display Certification (https://skillshop.credential.net/b67b8bd8-d074-4c79-9f1f-18b4099e8955#acc.8areD3JC)</a>
+      <a href="#" target="_blank"> Google Ads Display Certification https://skillshop.credential.net/b67b8bd8-d074-4c79-9f1f-18b4099e8955#acc.8areD3JC</a>
     </li>
   </ul>
 
