--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,25 +32,25 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
+    title="Breathe Easy, Cost & Tips to Professional Smoke Removal Service"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="Smoke Damage can be devastating to our health, without a proper smoke removal service in a home or business after the problem of smoke damage or as a result of accumulated cigarette smoke in a property"
+    url="https://www.puroclean.com/schwenksville-pa-puroclean-lansdale/blog/breathe-easy-cost-tips-to-professional-smoke-removal-service/"
     badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
+    title="Number 1 Best SEO Agency In Lagos State"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="Are you in need of  best SEO agency in Lagos,  Hire GREENPATHSDEV SEO Agency in Lagos today ,enhance your business online presence by  bring traffic to your business website and generating leads, sales, views and impression on your website."
+    url="https://greenpathsdev.com/best-seo-agency-in-lagos-state-nigeria/"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 3"
+    title="Professional Biohazard Cleanup: Ensuring Your Health and Safety"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="What could be more important than your health and safety. Get rid of unnecessary biohazard which could endanger your health and harm your safety. This can only be done by a Professional biohazard cleanup expert."
+    url="https://greenpathsdev.com/professional-biohazard-cleanup/"
     badge="FOSS"
   />
 
