--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -38,7 +38,7 @@
             ></path>
         </svg>
     </a>
-    <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+    <a href="https://x.com/oladele66025?t=XGIhQ2TscX8ru9pYuDa9qg&s=09"_blank" class="mx-3" aria-label="Twitter" title="Twitter">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -51,7 +51,7 @@
         </svg>
     </a>
     <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href="www.linkedin.com/in/rofiat-oladele"
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
