--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -32,7 +32,16 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="time-line-container mb-10">
-    <TimeLineElement
+   <TimeLineElement
+      title="Digital Marketer"
+      subtitle="2024 at Digitaladplanet, Lagos, Nigeria"
+    >
+•	 Developed and implemented comprehensive digital marketing campaigns to drive brand awareness and sales.
+•	Collaborated with cross-functional teams to refine marketing strategies and ensure campaign success.
+•	analyzed campaign performance and applied data-driven insights for continuous improvement.
+    </TimeLineElement>
+
+<TimeLineElement
       title="Digital Marketing Intern"
       subtitle="2024 at GREENPATHSDEV, Lagos, Nigeria"
     >
