--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -32,7 +32,28 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="time-line-container mb-10">
-   <TimeLineElement
+  
+  <TimeLineElement
+      title="PPC & SEO Specialist"
+      subtitle="January 2025-Present at GATEGOLD FITNESS NIGERIA LIMITED(REMOTE), Lagos, Nigeria"
+    >
+•Executed digital marketing strategies to promote the brand and increase online engagement.
+•Improved website rankings by conducting thorough keyword research and implementing effective SEO techniques.
+•Managed and optimized Google Ads campaigns to drive traffic, increase conversions, make sales, and maximize ROI.
+•Monitored website performance and adapted strategies to meet evolving market trends.
+ </TimeLineElement>
+
+<TimeLineElement
+      title="Digital Marketer"
+      subtitle="December 2024-Present at NEOVARSITY GLOBAL(REMOTE), Lagos, Nigeria"
+    >
+• Manage and optimize the company’s social media platforms to enhance brand visibility and engagement.
+•Generate quality leads through targeted digital campaigns.
+•Develop and run Meta ads with a focus on conversion optimization.
+•Design and send newsletter emails to prospects, effectively communicating the company’s value proposition.
+ </TimeLineElement>
+
+<TimeLineElement
       title="Digital Marketer"
       subtitle="2024 at Digitaladplanet, Lagos, Nigeria"
     >
